# ctemplate

./: .gitignore  LICENSE.md  Makefile.am  README.md  configure.ac
libother/: Makefile.am  other.c  other.h
libother/.deps/: other.Po
src/: Makefile.am  foo.c  foo.h  main.c
src/.deps/: foo.Po  main.Po
