# ACINIT(package_name, version, bug_report_address)
AC_INIT([myprog], [0.1], vianney.bajart@gmail.com)
# Initialize Automake
AM_INIT_AUTOMAKE
# Project uses libraries
AC_PROG_RANLIB
# C project
AC_LANG(C)
# Require C compiler
AC_PROG_CC
# Makefile paths
AC_CONFIG_FILES([\
    Makefile \
    libother/Makefile \
    src/Makefile \
])
# Generate configure script
AC_OUTPUT
